# python-code-splitter

./: LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: release.yml  test.yml
src/: code_splitter.py  command.py  consts.py  main.py  patterns.py  utils.py
src/entities/: block.py  block_pattern.py  file.py
src/enums/: block_type.py
src/services/: attach_import_statements_service.py  generate_import_statement_service.py  generate_init_file_service.py  generate_new_git_branch_name_service.py  load_file_service.py  move_blocks_service.py  move_blocks_to_new_files_service.py  update_init_file_service.py
src/types/: lines.py
tests/samples/: models.py
tests/services/: test_load_file_service.py
