[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project]
name = "python-code-splitter"
version = "0.1.2"
requires-python = ">=3.9"
description = "split Python code by classes and functions"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "routerman"}
]
dependencies = []

[dependency-groups]
dev = [
    "autoflake8>=0.4.1",
    "build>=1.2.2.post1",
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120

[project.scripts]
python-code-splitter = "src.main:main"
