[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project]
name = "python-code-splitter"
version = "0.2.2"
requires-python = ">=3.9"
description = "split Python code by classes and functions"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "routerman"}
]
dependencies = []

[project.urls]
GitHub = "https://github.com/routerman/python-code-splitter"

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "build>=1.2.2.post1",
    "isort>=6.0.1",
    "pytest>=8.3.4",
    "ruff>=0.9.8",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120

[project.scripts]
python-code-splitter = "src.main:main"
